# MAL-Updater

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SKILL.md  TODO.md  pyproject.toml
config/: settings.toml.example
docs/: AUTOMATION.md  CRUNCHYROLL_ADAPTER.md  CURRENT_STATUS.md  DECISIONS.md  JSON_CONTRACT.md  MAL_OAUTH.md  OPERATIONS.md  PYTHON_WORKER.md
examples/: env.example
migrations/: 004_mal_recommendation_harvest_status.sql  004_provider_search_cache.sql  005_recommendation_score_snapshots.sql  006_recommendation_eligibility_evidence.sql  007_mal_user_anime_list_cache.sql
references/: AUTOMATION.md  CURRENT_STATUS.md  DECISIONS.md  OPERATIONS.md  PYTHON_WORKER.md  bootstrap-onboarding.md  cli-recipes.md  data-surfaces.md  env.example  provider-core-architecture.md  settings.toml.example
rust/crunchyroll_adapter/: Cargo.toml
rust/crunchyroll_adapter/src/: main.rs
scripts/: bootstrap.sh  install_user_systemd_units.sh  run_exact_approved_sync_cycle.sh  run_health_check_cycle.sh
secrets/: README.md
tests/: test_auth_config.py  test_bootstrap_audit_cli.py  test_cli_sqlite_timestamp.py  test_config.py  test_crunchyroll_auth.py  test_crunchyroll_provider_search.py  test_crunchyroll_snapshot.py  test_db_connection_lifecycle.py  test_exact_approved_sync_cycle_cli.py  test_health_check_cycle_script.py  test_health_cli.py  test_hidive_auth.py  test_hidive_provider_search.py  test_hidive_snapshot.py  test_install_user_systemd_units.py  test_mal_client.py  test_mal_list_refresh_cli.py  test_mal_user_anime_list_cache.py  test_mapping_sync.py  test_openclaw_delivery.py  test_provider_cli.py  test_recommend_maintain.py  test_recommendation_dashboard.py  test_recommendation_eligibility_evidence_db.py  (+9 more)
(+40 files in other folders)
