[package]
name = "crunchyroll-adapter"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
description = "Crunchyroll adapter for MAL-Updater"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
crunchyroll-rs = "0.17.0"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
